fix(ui): make change-split-orientation button always visible

--- a/cotoami_desktop/ui/assets/css/app/_stock.scss
+++ b/cotoami_desktop/ui/assets/css/app/_stock.scss
@@ -14,8 +14,6 @@ section.stock {
       left: 0;
       padding: 0 6px;
 
-      display: none;
-
       span.material-symbols {
         color: hsl(205, 20%, 32%);
         font-size: 26px;
@@ -37,12 +35,6 @@ section.stock {
 
       span.material-symbols {
         font-size: 24px;
-      }
-    }
-
-    &:hover {
-      button.change-split-orientation {
-        display: block;
       }
     }
   }
